thead spacing fixed

--- a/css/table-main.css
+++ b/css/table-main.css
@@ -205,7 +205,7 @@ td {
 
 
 .column1 {
-  width: 20%;
+  width: 14%;
   /* padding-left: 40px; */
   font-weight: 600 !important;
   letter-spacing: 1%;
@@ -418,7 +418,7 @@ td {
     font-size: 0.9rem;
     color: var(--MatteBlack);
     line-height: 1.4;
-    text-align: left;
+    /* text-align: center; */
   }
 }
 
